@@ -1,0 +1,11 @@
+module InheritedResources
+
+  # = has_scopes
+  #
+  # This module in included in your controller when has_scope is called for the
+  # first time.
+  #
+  module HasScopeHelpers
+
+  end
+end
